log
Sun, Apr 20, 2025  5:00:31 PM: 
 hashmap.c | 101 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++----
 1 file changed, 96 insertions(+), 5 deletions(-)
 tests:  14|1
total_score: 60/70
eeef3b7
Sun, Apr 20, 2025  5:02:46 PM: 
 hashmap.c | 20 ++++++--------------
 1 file changed, 6 insertions(+), 14 deletions(-)
 tests:  14|1
total_score: 60/70
5ce06c6
Sun, Apr 20, 2025  5:03:26 PM: 
 hashmap.c | 27 +++++++++++++++++++++++----
 1 file changed, 23 insertions(+), 4 deletions(-)
 tests:  14|1
total_score: 60/70
bb9fd40
Sun, Apr 20, 2025  5:05:02 PM: 
 hashmap.c | 27 ++++-----------------------
 1 file changed, 4 insertions(+), 23 deletions(-)
 tests:  14|1
total_score: 60/70
fd4fee7
Sun, Apr 20, 2025  5:09:27 PM: 
 hashmap.c | 8 +++-----
 1 file changed, 3 insertions(+), 5 deletions(-)
 tests:  14|1
total_score: 60/70
80ac890
Sun, Apr 20, 2025  5:11:42 PM: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  14|1
total_score: 60/70
5d78efd
Sun, Apr 20, 2025  5:15:05 PM: 
 hashmap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:4:
hashmap.c: In function 'eraseMap':
hashmap.c:118:26: error: expected expression before ']' token
  118 |             map->buckets[] = NULL;
      |                          ^
test.c: At top level:
test.c:8:8: warning: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Wattributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
c588e7f
Sun, Apr 20, 2025  5:15:22 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  14|1
total_score: 60/70
baa05ac
Sun, Apr 20, 2025  5:18:13 PM: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  14|1
total_score: 60/70
5a23ee4
Sun, Apr 20, 2025  5:19:26 PM: 
 hashmap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  14|1
total_score: 60/70
f35a3cd
Sun, Apr 20, 2025  5:19:42 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  17|0
total_score: 70/70
96f512c
Sun, Apr 20, 2025  5:32:26 PM: 
 hashmap.c | 58 +++++++++++++++++++++++++++++++---------------------------
 1 file changed, 31 insertions(+), 27 deletions(-)
 tests:  17|0
total_score: 70/70
49e045c
